--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,7 +36,7 @@ body {
   font-family: var(--font-nunito), var(--font-inter);
 }
 
-nav {
+#navbar{
   background-color: var(--primary-accent);
   #active {
     background-color: var(--secondary-accent);
