--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --text-color: black;
   --primary-accent: #758ecd;
   --secondary-accent: #5A78C4;
+  --tertiary-accent: #6984C9;
 }
 
 .dark {
@@ -14,6 +15,7 @@
   --text-color: #E5E5E5;
   --primary-accent: #A02C3D;
   --secondary-accent: #802331;
+  --tertiary-accent: #902737;
 }
 
 /* @theme inline {
@@ -50,4 +52,12 @@ footer {
 #profile-picture {
   background: var(--primary-accent);
   border: 4px solid var(--secondary-accent);
+}
+
+#download-resume {
+  background: var(--primary-accent);
+  color: var(--text-color);
+}
+#download-resume:hover {
+    background: var(--tertiary-accent);
 }
